--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
    branches: [main]
 
 jobs:
-  runs-on: [self-hosted,linux]
-
--name: Fizzbuzz
-run: FizzBuzz
+  build:
+    runs-on: [self-hosted,linux]
+    steps:
+      - run: echo "fizzbuzz"
