--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,3 +8,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker build python
+
+login:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: docker/login-action@v2
+    - with:
+      registry: ghcr.io
+      username: ${{ github.actor }}
+      password: ${{ secrets.GITHUB_TOKEN }}
