--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
    branches: [main]
 
 jobs:
-  build:
+  Build:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
@@ -17,3 +17,10 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+  Push:
+    - uses: docker/build-push-action@v3
+      with:
+        context: python/Dockerfile 
+        push: true
+        tags: python:latest
