--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
    branches: [main]
 
 jobs:
-  Build:
+  build:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
@@ -18,9 +18,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-  Push:
-    - uses: docker/build-push-action@v3
-      with:
-        context: python/Dockerfile 
-        push: true
-        tags: python:latest
+  push:
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: docker/build-push-action@v3
+        with:
+          context: python/Dockerfile
+          push: true
+          tags: python:latest
