--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+  push:
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: docker/build-push-action@v3
+        with:
+          context: python/Dockerfile
+          push: true
+          tags: python:latest
