change context to .

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,6 @@ jobs:
     steps:
       - uses: docker/build-push-action@v3
         with:
-          context: python/Dockerfile
+          context: .
           push: true
           tags: python:latest
