point to the python Dockerfile
by default, docker/build-push-action looks in the root of the repo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,6 @@ jobs:
       - uses: docker/build-push-action@v3
         with:
           context: .
+          file: python/Dockerfile
           push: true
           tags: python:latest
