--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,24 +3,21 @@ on:
    branches: [main]
 
 jobs:
-  build:
+  deploy_python:
     runs-on: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v3
+      - name: checkout repo
+        uses: actions/checkout@v3
 
-  login:
-    runs-on: [ubuntu-latest]
-    steps:
-      - uses: docker/login-action@v2
+      - name: login to ghcr.io
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-  push:
-    runs-on: [ubuntu-latest]
-    steps:
-      - uses: docker/build-push-action@v3
+      - name: docker push to ghcr.io
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: python/Dockerfile
