change tag to be the ghcr.io namespace
this is in order to correctly authenticate to ghcr.io

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,4 @@ jobs:
           context: python
           file: python/Dockerfile
           push: true
-          tags: python:latest
+          tags: ghcr.io/amandawiggins/fizzbuzz:python
